--- a/layout.css
+++ b/layout.css
@@ -1,9 +1,25 @@
-﻿
+﻿/*Nedladdningsbart font*/
+
+@font-face{ 
+		
+		src:url(font/RobotoMono-LightItalic.ttf);
+		font-family: roboto;
+}
+/*Keyframes för animeringen på footern då skottet rör sig från vänster till höger */
+@keyframes skott {
+  0%   {background-color:red; left:0px; top:0px;}
+  100% {background-color:red; left:90%; top:0px;}
+}
+
+
+/* Bakgrundsinformation och bild*/
 body
 {
     background-color: aqua;
 	background-image:url("https://opspectraining.com/wp-content/uploads/2012/04/advanced-competition-pistol.jpg");
 }
+
+/*Reaktiv Trespaltsgrid*/
 .grid
 {
     text-align:center;
@@ -18,6 +34,7 @@ body
                         "footer footer footer";
 }
 
+/*Information för allt inom .titel griden-arean*/
 .titel 
 {
 	
@@ -29,6 +46,7 @@ body
 		text-align:center;
 
 	}
+	/*Information för allt inom .bild griden-arean*/
 .bild
 {
     grid-area: bild;
@@ -36,22 +54,14 @@ body
 	overflow: hidden;
 }
 
-.bild > img
-{
-	
-}
 
-
+/*Information för allt inom .text griden-arean*/
 .text {
     grid-area: text;
     background-color: palevioletred;
 }
-.footer {
-    grid-area: footer;
-    background-color: springgreen;
-}
 
-
+/*Koden för navmenyerna, bestämmer utseende position m.m*/
 nav
 {
     height: 15vh;
@@ -74,7 +84,8 @@ nav > ul a {
     display: block;
     color: rgba(255,255,255,1);
     text-align: center;
-    font: 34px Arial;
+	font-family: roboto;
+    font: 34px;
     text-decoration: none;
     border-radius: 25px;
 	background-color: grey;
@@ -90,18 +101,19 @@ nav ul li{
 	width: 80%;
 }
 
+/*Stilkod som påverkar alla länkar på sidan*/
 a
 {
     text-decoration: none;
 }	
 	a:hover
 	{
-		background-color: red;
+		background-color: rgba(255,0,0,1);
 	}
 
 	a:active
 	{
-		background-color:rgba(255,255,255,1)
+		background-color:rgba(255,255,255,1);
 	}
 
 
@@ -116,6 +128,24 @@ a
         border: solid 2px black;
     }
 
+		/* Gruppselektor för tabellkroppen*/
+	tr:nth-child(2),tr:nth-child(4)
+	{
+		background-color:black;
+		color: rgba(255, 255, 255, 1);
+		font-family:Arial;
+		border:rgba(255, 255, 255, 1);
+	}
+	/* Gruppselektor för tabellkroppen*/
+	tr:nth-child(3),tr:nth-child(1)
+	{
+		background-color:white;
+		border:rgba(0, 0, 0, 1);
+		border:rgba(0, 0, 0, 1);
+		font-family: Arial;
+	}
+
+
 .grenbild
 {
 	grid-area: bild;
@@ -123,9 +153,26 @@ a
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
+}
+
+iframe
+{
+	grid-area: bild;
+	margin: 0 auto;
+	border: solid 2px;
+	width: 60%;
+	height: 95%;
 
 }
+
 /*Vänster kolumn grid*/
+
+.vt
+{
+	grid-area: vt;
+	background-color: yellow;
+}
+
 
 .vm
 {
@@ -168,4 +215,25 @@ a
 	grid-area: hm;
 	overflow: hidden;
 	background-color: red;
+}
+
+.footer {
+    grid-area: footer;
+    background-color: springgreen;
+}
+
+.footer > img{
+	display: block;
+	margin-left: 5%;
+    margin-right: 95%;
+	width: 10%;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.footer > img:hover{
+	animation-name: skott;
+	animation-duration:4s;
+	position: relative;
+
 }
